# NBLyzer

UI/src/: constants.ts  events.ts  (+3 more)
framework/: README.md  pyproject.toml
framework/nblyzer/src/: benchmarker.py  constants.py  events.py  nblyzer.py  nblyzer_cli.py  nblyzer_server.py
framework/nblyzer/src/IR/: intermediate_representations.py
framework/nblyzer/src/IR/visitors/: __init__.py  assigns_visitor.py  def_use_visitor.py
framework/nblyzer/src/analyses/: analysis.py  dataleak_analysis.py  idle_cell_analysis.py  isolated_cell_analysis.py  stale_cell_analysis.py
framework/nblyzer/src/analyses/abs_domains/dataleak_lattice/: columns.py  data_frame.py  data_frame_sets.py  rows.py
framework/nblyzer/src/analyses/abs_states/: abs_state.py  code_impact_abs_state.py  dataleak_abs_state.py
framework/nblyzer/src/analyses/runner/: analyses_utils.py  analysis_results.py  queue.py  runners.py  stats.py
framework/nblyzer/src/resource_utils/: rsrc_mngr.py  utils.py
framework/tests/: rtests.py  test_dl_abs_state.py  test_events.py  test_idle_cell_analysis.py  test_isolated_cell_analysis.py  test_maintenance.py  test_nblyzer_cli.py  test_stale_cell_analysis.py
framework/tests/resources/: Basic.ipynb  Test.ipynb  dataleak_false.ipynb  dataleak_true.ipynb  victim.ipynb
framework/tests/resources/rtests/: test1.ipynb  test1.ipynb.out  test2.ipynb  test2.ipynb.out  test3.ipynb  test3.ipynb.out  test4.ipynb  test4.ipynb.out  test5.ipynb  test5.ipynb.out  test6.ipynb.out  test7.ipynb  test7.ipynb.out  test8.ipynb  test8.ipynb.out  test9.ipynb  test9.ipynb.out
